2006-02-18  Behdad Esfahbod  <behdad@gnome.org>

	* devhelp.desktop.in.in: Categorize as GTK too, and add MimeType.
	Patch from Stephane LOEUILLET. Fixes bug #328030.

2006-02-17  Richard Hult  <richard@imendio.com>

	* configure.in: Update GTK+/GLib requirements to 2.8 since that's
	what we need. Fixes bug #326071.

	* src/dh-main.c (main): Check if the options were correct. Fixes
	bug #328948.

2006-01-21  Richard Hult  <richard@imendio.com>

	* src/bacon-message-connection.c:
	* src/bacon-message-connection.h: Update from bacon.

2006-01-15 Christian Persch <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Updated from Epiphany: correct gecko version check
	if mozilla-config.h includes other files (multi-arch).

2006-01-02  Mikael Hallendal  <micke@imendio.com>

	* MAINTAINERS: Added

2005-12-17  Richard Hult  <richard@imendio.com>

	* Release 0.11.

	* README: Bring a bit more up to date.

2005-12-17  Richard Hult  <richard@imendio.com>

	* NEWS: Prepare for a release.

	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* src/Makefile.am: Patch from Christian Persch to simplify gecko
	configure checks, fixes bug #322750. Also bump the version.
	
2005-12-17  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: (base_get_book_path), (base_add_books): 
	* src/dh-parser.c: (parser_start_node_cb), (dh_parser_read_file),
	(parser_read_gz_file): Add the new suffix for the new format and
	handle that.

2005-11-28  Richard Hult  <richard@imendio.com>

	* src/dh-main.c: (message_received_cb), (main): Make both new and
	old windows raise when searching through the bacon connection.

2005-11-19  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: (parser_start_node_cb), (dh_parser_read_file):
	Add ugly workaround until we have solved the version issue with
	the old/new devhelp formats.

2005-11-19  Richard Hult  <richard@imendio.com>

	* src/bacon-message-connection.c: Update.

	* src/dh-main.c: Use present_with_time and remove the separate
	raise command.
